[package]
name = "serde-env-field"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Shiposha"]
license = "MIT"
repository = "https://github.com/mrshiposha/serde-env-field"
description = "A helper for serde deserialization with environment variables expansion"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-untagged = "0.1.1"
shellexpand = "3.1.0"

[dev-dependencies]
derive_more = "0.99.17"
toml = "0.8.4"
