[package]
name = "serde-env-field"
version = "0.2.0"
edition = "2021"
authors = ["Daniel Shiposha"]
license = "MIT"
repository = "https://github.com/mrshiposha/serde-env-field"
description = "A helper for serde deserialization with environment variables expansion"
documentation = "https://docs.rs/serde-env-field/latest/serde_env_field/"
categories = ["encoding"]
keywords = ["serde", "environment-variables", "env", "proc-macro"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-untagged = "0.1.1"
shellexpand = "3.1.0"
serde-env-field-wrap = { path = "env-field-wrap" }

[dev-dependencies]
derive_more = "0.99.17"
indoc = "2.0.4"
serde_json = "1.0.107"
toml = "0.8.4"
