[package]
name = "serde-env-field-wrap"
version = "0.1.0"
edition = "2021"
description = "An attribute that wraps all the fields of a struct or an enum with the EnvField type"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
proc-macro-error = "1.0.4"
